src/test/ui/error-codes/E0659.stderr
error[E0659]: `foo` is ambiguous
  --> $DIR/E0659.rs:25:5
   |
25 |     collider::foo(); //~ ERROR E0659
   |     ^^^^^^^^^^^^^
   |
note: `foo` could refer to the name imported here
  --> $DIR/E0659.rs:20:13
   |
20 |     pub use moon::*;
   |             ^^^^^^^
note: `foo` could also refer to the name imported here
  --> $DIR/E0659.rs:21:13
   |
21 |     pub use earth::*;
   |             ^^^^^^^^
   = note: consider adding an explicit import of `foo` to disambiguate

error: aborting due to previous error

